[metadata]
name = dummy_project
version = attr: dummy_project.__version__
description = Dummy Project with python >3.7 dependencies
long_description = file: README.md
long_description_content_type = text/markdown
url = 
author = Tim Rietveld
author_email = trietveld@lely.com
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
python_requires = >=3.8
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

